tests/ui/borrowck/suggest-use-as-mut-for-map-1.stderr
error[E0596]: cannot borrow `*string` as mutable, as it is behind a `&` reference
  --> $DIR/suggest-use-as-mut-for-map-1.rs:11:5
   |
LL |     string.push_str("test");
   |     ^^^^^^ `string` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL -     let string = &map[&0];
LL +     let string = map.get_mut(&0).unwrap();
   |

error[E0596]: cannot borrow `*string` as mutable, as it is behind a `&` reference
  --> $DIR/suggest-use-as-mut-for-map-1.rs:17:5
   |
LL |     string.push_str("test");
   |     ^^^^^^ `string` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL -     let string = &map[&0];
LL +     let string = map.get_mut(&0).unwrap();
   |

error[E0596]: cannot borrow `*string` as mutable, as it is behind a `&` reference
  --> $DIR/suggest-use-as-mut-for-map-1.rs:21:5
   |
LL |     string.push_str("test");
   |     ^^^^^^ `string` is a `&` reference, so the data it refers to cannot be borrowed as mutable
   |
help: consider changing this to be a mutable reference
   |
LL |     let string = &mut vec[0];
   |                   +++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0596`.
